2007-12-30  Sergey Poznyakoff  <gray@gnu.org.ua>

	* examples/config/comsat.conf: Remove obsolete example file.
	* examples/config/mailutils.rc: Remove obsolete example file.

	* comsat/oldcfg.c: New file.
	* comsat/Makefile.am: Add oldcfg.c.
	* comsat/comsat.c: Handle old -c option and provide a new option
	for converting old-style config file to the new format.

	* comsat/Makefile.am: Remove cfg.c
	* comsat/cfg.c: Remove.
	* comsat/comsat.c: Use MU configuration and acls.
	* comsat/comsat.h: Include acl.h
	* libproto/maildir/mbox.c (maildir_qfetch): Bugfix.

	* NEWS: Update.
	
	* frm/testsuite/frm/test.exp: Call mu_init with -noflags option.
	Use --mail-folder option when necessary.
	* messages/testsuite/messages/test.exp: Likewise.
	* readmsg/testsuite/readmsg/test.exp: Likewise.
	* sieve/testsuite/lib/sieve.exp: Likewise.
	* sieve/testsuite/sieve/action.exp: Likewise.
	* sieve/testsuite/scripts/fileinto.sv: Use +file, instead of
	%file.
	
	* imap4d/imap4d.c: Register mailbox formats before parsing
	configuration.
	* imap4d/util.c (util_wcard_match): Replaced with a more efficient
	implementation, based on wildmat from GNU Radius.
	* imap4d/testsuite/imap4d/list.exp: Expect two non-mailbox files
	to appear in the list output (see libproto/mbox/folder.c, 2007-12-28).

	* libargp/common.c: New option --mail-folder.
	* libcfg/common.c: New statement mailbox/folder

	* libproto/maildir/folder.c (_maildir_is_scheme): Never return
	MU_FOLDER_ATTRIBUTE_DIRECTORY bit: maildir folders cannot contain
	subfolders.
	* libproto/maildir/mbox.c (maildir_msg_init): Bugfix: use full
	file name.
	Print additional diagnostics if stat fails.
	* libproto/mbox/folder.c (list_helper): Take additional argument,
	record, specifying a mu_record_t object to match entries
	against. If it is NULL, mu_registrar_lookup is used.
	Fix descending into subdirectories.

	* maidag/deliver.c (deliver): Split off deliver_to_user function;